tests/errors/002-parsing/004-expected-end-of-tuple/001-argument-lists/001-terminal-nonsense.xxx
x := (a : int, garbage garbage garbage) => {}
